--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,10 @@ dependencies {
 
     testImplementation "com.google.android.gms:play-services-places:17.0.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01'
 }
